# graphmind

./: .dockerignore  .editorconfig  .env.example  .gitignore  .ignore  .pre-commit-config.yaml  .sourcery.yaml  .sprite  ABLATION_RESULTS.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS  CURRENT_WORK.md  Caddyfile  Dockerfile  EXPERIMENT_LOG.yaml  Justfile  MAJOR_RESULTS.md  README.md  docker-compose.yml  fleche.toml  fly.toml  pyproject.toml  q  run.sh  tasks.sh
.claude/: settings.json
.claude/commands/: experiment.md  update-fleche.md
.claude/hooks/: session-start.sh
.github/workflows/: build.yml  fly.yml  frontend.yml  lint.yml
archive/: README.md  asap_avg_unique_ref_mentions.py  asap_cmp_references.py  classified_context_stats.py  crossref_full_best_query.py  crossref_title_fuzz.py  s2_title_fuzz.py  show_asap_prompt.py  unique_asap_reference_titles.py
assets/examples/: eval_demos.txt  eval_prompt.txt  extract_prompt.txt  rationales.txt  related_papers.txt  summary_fluent.txt  summary_toposort.txt  title_abstract.txt
deployment/: Caddyfile  Dockerfile  deploy_api.sh  docker-compose.yml
deployment/fail2ban/: caddy-status.conf  caddy.conf  install.sh
docs/: API.md  BASELINES.md  CONTRIBUTING.md  EXPERIMENTS.md  FLECHE.md  SURVEY_INSTRUCTIONS.md
docs/plans/: RAG-Novelty.md  SC4ANM.md
experiments/: Justfile  reviews.just
experiments/eval/: Justfile
experiments/eval_orc/: Justfile
experiments/eval_peer/: Justfile
experiments/eval_simple/: Justfile
experiments/reviews/: Justfile
external_link/: extract_ex_kg.py  negation_words.txt  readme.md
external_link/scripts/: extract_reference.sh
frontend/: .editorconfig  .env.example  .gitignore  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  Justfile  README.md  eslint.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/.claude/: settings.json
frontend/.github/workflows/: deploy.yml
frontend/pages/: abstract-detail.html  detail-multi.html  detail.html  paper-detail.html  paper-explorer.html  paper-network.html  partial-detail.html  search.html  todo.html
frontend/public/data/: test-data.json
frontend/src/: footer.ts  style.css  theme.ts  util.test.ts  util.ts  vite-env.d.ts
frontend/src/paper-explorer/: abstract.ts  abstractDetail.ts  cache.ts  chat.test.ts  chat.ts  detail-multi.ts  detail.ts  helpers.test.ts  helpers.ts  main.ts  modals.ts  model.ts  partialDetail.ts  routes.ts  services.test.ts  services.ts  settings.ts  storage.ts
frontend/src/paper-network/: apiService.ts  main.ts  model.test.ts  model.ts  network.ts
frontend/tests/e2e/: paper-evaluation.spec.ts
labs/: EXPERIMENT_LOG.yaml  MAJOR_RESULTS.md  PLAN_novelty_baselines.md
notebooks/: fuzzy_ratio.ipynb  paper_ratings_noise.ipynb
scripts/: README.md  __init__.py  asap_avg_unique_ref_mentions.py  call_sse.py  check_agg_reference_polarity.py  check_available_ratings.py  checkcycle_prototype.py  cmp_ratings_approval.py  compress_json_files.py  context_count.sh  convert_key_case.py  count_context.py  crossref_full_best_query.py  cycle_break_mwfas.py  demo_data.py  deploy_api.sh  diff_prompt.py  experiment_classify.fish  experiment_classify.py  experiment_classify.sh  explore_context_experiments.py  explore_context_results.py  filter_baseline_data.py  find_base_models.py  find_citation_paragraph.py  find_errors.py  find_peerread_aspect.py  fix_annotated_format.py  json_find_key.py  merge_s2_paper_json.py  peerread_avg_unique_ref_mentions.py  polarity_frequency.sh  remove_invalid.py  run_full_data_pipeline.py  run_full_openreview_pipeline.py  run_full_orc_pipeline.py  run_full_peerread_pipeline.py  s2_areas_merge.py  s2_merge_api_results.py  s2_remove_empty.py  (+6 more)
scripts/experiments/: README.md  __init__.py  experiment_classify.py  explore_context_experiments.py  explore_context_results.py  full_classification_table.py  nova_grid.py  peter_threshold.py  show_eval_results.fish  show_eval_results.nu  show_macro_results.py
scripts/tools/: README.md  __init__.py  blame.py  check_data.py  cycle_break_mwfas.py  diff_prompt.py  extract_rationales.py  json_find_key.py  json_mismatch.py  json_to_table.py  paper-review-tool.html  plotcloc.py  rate_limits.py  rationale-editor.html  s2_search.py
scripts/transform/: README.md  __init__.py  combine_json_files.py  convert_key_case.py  merge_s2_paper_json.py
src/paper/: __init__.py  cli.py  construct_dataset.py  demo_data.py  embedding.py  evaluation_metrics.py  find_type.py  hierarchical_graph.py  openreview_client.py  orc.py  preprocess.py  progress.py  rate_limiter.py  related_papers.py  split.py  types.py  util.py  vector_db.py
src/paper/annotate/: __init__.py  annotate_contexts.py
src/paper/annotate_ui/: app.jsx  index.html  instructions.md  instructions_blind.md  styles.css
src/paper/asap/: merge.py  (+11 more)
src/paper_hypergraph/: evaluation_metrics.py  graph.py  hierarchical_graph.py  preprocess.py  rate_limiter.py  util.py
tests/: __init__.py  conftest.py  helpers.py  pyproject.toml  test_asap_peter_pipeline.py  test_clean_maintext.py  test_demo.py  test_evaluation_metrics.py  test_latex_parser.py  test_peerread_peter_e2e.py  test_peerread_peter_pipeline.py  test_peter_pipeline.py  test_placeholder.py  test_pydantic_protocol.py  test_s2orc.py  test_semantic_scholar.py  test_semantic_scholar_http.py  test_typename.py  utils.py
tests/asap/: test_extract.py
tests/backend/: test_api.py  test_rate_limiter.py  test_sse.py
tests/e2e/: __init__.py  test_backend_evaluation.py  test_orc_peter.py  test_peerread_peter.py
tests/gpt/: __init__.py  test_annotate_paper.py  test_ensemble.py  test_evaluate_paper.py  test_evaluate_paper_search.py  test_graph_validation.py  test_novelty_utils.py  test_run_gpt.py
tests/peerread/: __init__.py  model.py
tests/single_paper/: __init__.py  test_graph_evaluation.py  test_related_papers.py  test_summary_cleaning.py
tests/tools/: __init__.py  test_demo_data.py  test_experiment_log.py
tests/util/: __init__.py  test_init.py  test_serde.py
typings/: openlimit.pyi
(+371 files in other folders)
